# sudoku-app

./: .gitignore  requirements.txt
backend/: main.py
backend/cpp/: CMakeLists.txt  bindings.cpp  sudoku.cpp  sudoku.h
frontend/: app.js  index.html  styles.css
